--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -3,7 +3,7 @@ import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
 dayjs.extend(utc);
 
-const { date, format = "YYYY-MM-DD" } = Astro.props;
+const { date, format = "YYYY/MM/DD" } = Astro.props;
 ---
 
 <span>{dayjs(date).format(format)}</span>
