--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -2,6 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "@components/FormattedDate.astro";
 import MyPicture from "./MyPicture.astro";
+import IconText from "./IconText.svelte";
 
 interface Props {
   post: CollectionEntry<"posts">;
@@ -30,35 +31,34 @@ function truncateUTF8String(str: string, maxBytes: number) {
 const truncatedDescription = truncateUTF8String(post.data.description, 150);
 ---
 
-<div
-  class="relative overflow-hidden rounded-xl border bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:border-neutral-600 dark:bg-neutral-900 md:flex md:flex-row"
->
-  <a href={`/posts/${post.slug}/`} class="block md:flex md:flex-1">
-    <div class="md:w-2/3">
+<div class="group relative md:flex md:flex-row">
+  <a href={`/posts/${post.slug}/`} class="block md:flex md:flex-1 md:gap-2">
+    <div class="aspect-video overflow-hidden rounded-md">
       <MyPicture
+        className="translation duration-500 group-hover:scale-105"
         src={post.data.cover}
         alt={post.data.coverAlt}
         loading="eager"
         fetchpriority="high"
       />
     </div>
-    <div
-      class="absolute bottom-0 end-0 start-0 bg-gradient-to-t from-black p-4 md:relative md:flex md:w-1/3 md:flex-col md:justify-start md:bg-transparent md:p-5"
-    >
-      <div
-        class="mt-8 flex items-center gap-4 text-xs text-white dark:text-white md:text-neutral-900"
-      >
-        <span>{post.data.tags.join(" ")}</span>
-        <FormattedDate date={post.data.pubDate} />
-      </div>
-      <h2
-        class="mt-3 text-lg font-bold text-white dark:text-white md:text-neutral-900"
-      >
+    <div class="md:relative md:flex md:flex-col md:justify-start md:gap-4">
+      <h2 class="mt-1 text-lg md:text-3xl">
         {post.data.title}
       </h2>
-      <p class="mt-3 text-white dark:text-white md:text-neutral-900">
-        {truncatedDescription}
-      </p>
+      <div>
+        <p class="hidden md:block">
+          {truncatedDescription}
+        </p>
+      </div>
+      <div class="text-xs">
+        <span
+          ><span class="material-symbols--update iconify align-text-bottom"
+          ></span>
+          <IconText><FormattedDate date={post.data.lastModified} /></IconText
+          ></span
+        >
+      </div>
     </div>
   </a>
 </div>
