--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -42,7 +42,7 @@ const computedBasePath = basePath ? ensureTrailingSlash(basePath) : "/page/";
       <a
         href={ensureTrailingSlash(urlPrev)}
         aria-label="Previous page"
-        class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10"
+        class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10"
       >
         <span class="icon-base iconify tabler--chevron-left" />
       </a>
@@ -55,7 +55,7 @@ const computedBasePath = basePath ? ensureTrailingSlash(basePath) : "/page/";
       Array.from({ length: endPage - startPage + 1 }, (_, i) => {
         const pageNumber = startPage + i;
         const isActive = currentPage === pageNumber;
-        const pageClass = `min-h-[38px] min-w-[38px] flex justify-center items-center py-2 px-3 text-sm rounded-lg ${isActive ? "bg-neutral-200 focus:bg-neutral-300 dark:bg-neutral-600 dark:focus:bg-neutral-500 dark:text-white" : "text-neutral-800 hover:bg-neutral-100 focus:outline-none focus:bg-neutral-100 dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10"}`;
+        const pageClass = `min-h-[38px] min-w-[38px] flex justify-center items-center py-2 px-3 text-sm rounded-lg ${isActive ? "bg-neutral-200 focus:bg-neutral-300 dark:bg-neutral-600 dark:focus:bg-neutral-500 dark:text-gray-300" : "text-neutral-800 hover:bg-neutral-100 focus:outline-none focus:bg-neutral-100 dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10"}`;
         return (
           <li>
             <a
@@ -75,7 +75,7 @@ const computedBasePath = basePath ? ensureTrailingSlash(basePath) : "/page/";
       <a
         href={ensureTrailingSlash(urlNext)}
         aria-label="Next page"
-        class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10"
+        class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-gray-300 dark:hover:bg-white/10 dark:focus:bg-white/10"
       >
         <span class="icon-base iconify tabler--chevron-right" />
       </a>
