--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ const description = `Error 404`;
   <main id="content">
     <div class="px-4 py-10 text-center sm:px-6 lg:px-8">
       <h1
-        class="block text-7xl font-bold text-gray-800 dark:text-white sm:text-9xl"
+        class="block text-7xl font-bold text-gray-800 dark:text-gray-300 sm:text-9xl"
       >
         404
       </h1>
