--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -49,7 +49,7 @@ const { page } = Astro.props;
 <BaseLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
   {
     page.currentPage === 1 ? (
-      <>
+      <div class="dark:text-gray-300">
         <div class="mb-4 grid grid-cols-1">
           {page.data.length > 0 && <HeroCard post={page.data[0]} />}
         </div>
@@ -72,9 +72,9 @@ const { page } = Astro.props;
             <PostCard post={post} />
           ))}
         </div>
-      </>
+      </div>
     ) : (
-      <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
+      <div class="grid grid-cols-1 gap-4 dark:text-gray-300 md:grid-cols-2 lg:grid-cols-3">
         {page.data.map((post, i) => {
           if (i === 1) {
             return (
