--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -7,6 +7,7 @@ import Share from "@components/Share.svelte";
 import MyPicture from "@components/MyPicture.astro";
 import placeholder from "@/content/images/placeholder.png";
 import Heading from "@components/Heading.astro";
+import IconText from "@components/IconText.svelte";
 
 export async function getStaticPaths() {
   const posts = await getCollection("posts");
@@ -27,67 +28,78 @@ const cover = post.data.cover ?? placeholder;
   image={cover.src}
 >
   <main>
-    <article class="prose mx-auto dark:prose-invert">
-      <div class="prose-h1 text-center">
-        <h1>{post.data.title}</h1>
+    <article>
+      <div class="prose mx-auto dark:prose-invert dark:text-gray-300">
+        <h1 class="mb-0 text-3xl font-medium">
+          {post.data.title}
+        </h1>
+        <span
+          ><span class="material-symbols--update iconify align-text-bottom"
+          ></span>
+          <IconText><FormattedDate date={post.data.lastModified} /></IconText
+          ></span
+        >
       </div>
       <div>
         <MyPicture
+          className="mx-auto"
           src={cover}
           alt={post.data.coverAlt ?? ""}
           loading="eager"
           fetchpriority="high"
         />
       </div>
-      <ins
-        class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-3857753364740983"
-        data-ad-slot="3872798108"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-      <script is:inline>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-      {
-        (() => {
-          if (headings.length === 0) {
-            return;
-          }
-
-          return (
-            <div class="border-2 border-dotted border-slate-700 px-4 py-2">
-              <ul role="list" class="not-prose list-inside list-decimal">
-                {headings.map((heading) => {
-                  if (heading.depth === 2) {
-                    return (
-                      <li>
-                        <a href={`#${heading.slug}`} class="underline">
-                          {heading.text}
-                        </a>
-                      </li>
-                    );
-                  }
-                })}
-              </ul>
-            </div>
-          );
-        })()
-      }
-      <div>
-        <Content components={{ h2: Heading }} />
-      </div>
-      <div class="prose-a:no-underline">
+      <div class="prose mx-auto dark:prose-invert">
+        <ins
+          class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-3857753364740983"
+          data-ad-slot="3872798108"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+        <script is:inline>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         {
-          post.data.tags.map((tag) => (
-            <span class="not-prose mb-2 mr-2 inline-block rounded-full bg-slate-700 px-3 py-1 text-sm text-white hover:bg-slate-600">
-              <a href={`/tags/${tag}/1/`}>{tag}</a>
-            </span>
-          ))
+          (() => {
+            if (headings.length === 0) {
+              return;
+            }
+
+            return (
+              <div class="mt-5 border-2 border-dotted border-slate-700 px-4 py-2">
+                <ul role="list" class="not-prose list-inside list-decimal">
+                  {headings.map((heading) => {
+                    if (heading.depth === 2) {
+                      return (
+                        <li>
+                          <a href={`#${heading.slug}`} class="underline">
+                            {heading.text}
+                          </a>
+                        </li>
+                      );
+                    }
+                  })}
+                </ul>
+              </div>
+            );
+          })()
         }
-      </div>
-      <div class="flex justify-between">
-        <small>Publish on <FormattedDate date={post.data.pubDate} /></small>
+        <div>
+          <Content components={{ h2: Heading }} />
+        </div>
+        <div class="prose-a:no-underline">
+          {
+            post.data.tags.map((tag) => (
+              <span class="not-prose mb-2 mr-2 inline-block rounded-full bg-slate-700 px-3 py-1 text-sm text-white hover:bg-slate-600">
+                <a href={`/tags/${tag}/1/`}>{tag}</a>
+              </span>
+            ))
+          }
+        </div>
+        <div class="flex justify-between">
+          <small>Publish on <FormattedDate date={post.data.pubDate} /></small>
+        </div>
       </div>
       <Share src={Astro.url} title={post.data.title} />
     </article>
