--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -36,7 +36,7 @@ const showTOC = headings.length !== 0;
           {post.data.title}
         </h1>
         <span
-          ><span class="material-symbols--update iconify align-text-bottom"
+          ><span class="iconify align-text-bottom material-symbols--update"
           ></span>
           <IconText><FormattedDate date={post.data.lastModified} /></IconText
           ></span
