--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -123,6 +123,25 @@ const showTOC = headings.length !== 0;
     <script is:inline>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    {
+      (() => {
+        if (!showTOC) {
+          return;
+        }
+
+        return (
+          <div class="fixed bottom-2 left-2 text-center text-white">
+            <a
+              href="#toc"
+              class="block h-16 w-16 place-content-center rounded-full bg-slate-700 hover:bg-slate-600"
+              aria-label="Go to Table Of Contents"
+            >
+              <span class="mdi--table-of-contents iconify text-2xl" />
+            </a>
+          </div>
+        );
+      })()
+    }
   </main>
   <script
     is:inline
